@@ -5,6 +5,7 @@
  * new PowerModule with power poles, minor power lines and wind turbines
  * many new WorldObject types in StreetFurnitureModule
  * correct rendering of covered ways through buildings, require tunnel=passage
+ * use bounds from input file for terrain and forest boundaries
  * keep camera position after reload (only works well with same bounding box)
  * correct aspect ratio depending on window dimensions
  * use Trove lib in PrimitiveBuffer, make buffering optional for PNG output
